Fix problem with spacing of main article

--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,12 @@ main > .container {
   display: grid;
 }
 
+.main-article img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .main-article > *:not(:first-child) {
   margin-top: var(--gap-size);
 }
